finalizando todos os testes que faltavam